--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chess.js": "^1.0.0-beta.6",
+    "fairy-stockfish-nnue.wasm": "^1.1.2",
+    "ffish": "^0.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
